# frontier-stable-token

./: .env.example  .eslintignore  .gitignore  .prettierignore  Anchor.toml  README.md  foundry.toml  hardhat.config.ts  layerzero-mainnet.config.ts  layerzero-testnet.config.ts  package.json  pnpm-lock.yaml
consts/: deploy.ts  deterministicDeploy.ts  interfaces.ts  utils.ts  wire.ts
contracts/: FrontierERC20F.sol  FrontierOFTAdapter.sol  FrontierOFTAdapterMintAndBurn.sol  FrontierVault.sol
contracts/fireblocks/: ERC20F.sol  README.md
contracts/interfaces/: IFrontierERC20F.sol
deploy/: FrontierOFTAdapterMintAndBurn.ts
deployments/arb-sepolia/: DefaultProxyAdmin.json  FRNTAdapter.json  FRNTAdapter_Implementation.json  FRNTAdapter_Proxy.json
deployments/arbitrum/: DefaultProxyAdmin.json  FRNTAdapter.json  FRNTAdapter_Implementation.json  FRNTAdapter_Proxy.json
deployments/avalanche/: DefaultProxyAdmin.json  FRNTAdapter.json  FRNTAdapter_Implementation.json  FRNTAdapter_Proxy.json
deployments/avalanche-fuji/: DefaultProxyAdmin.json  FRNTAdapter.json  FRNTAdapter_Implementation.json  FRNTAdapter_Proxy.json
deployments/base/: DefaultProxyAdmin.json  FRNTAdapter.json  FRNTAdapter_Implementation.json  FRNTAdapter_Proxy.json
deployments/base-sepolia/: DefaultProxyAdmin.json  FRNTAdapter.json  FRNTAdapter_Implementation.json  FRNTAdapter_Proxy.json
deployments/eth-sepolia/: DefaultProxyAdmin.json  FRNTAdapter.json  FRNTAdapter_Implementation.json  (+1 more)
programs/oft/: Cargo.toml
programs/oft/src/instructions/: lz_receive.rs  lz_receive_types.rs
tasks/: index.ts
(+52 files in other folders)
